css/styles.scss
/* ... */
.col-2 {
  width: 48.41269841269841%;
  float: left;
  position: relative;
}
.col-2.col-2-1 {
  margin: 0;
}
.col-2.col-2-2 {
  margin: 0 0 0 3.1746031746031744%;
}

/** HEADER **/

.top_primary{
	background:$purple;
	color:#fff;
	.container{
		position: relative;
	}
	a{
		color:#fff;
	}
	#logo{
		float:left;
		vertical-align: middle;
		margin-right: 10px;
		img{
			display: block;
		}

	}
	.store-info{
		float:left;
		width: 390px;
		font-family: $museo-500;
		ul{
			list-style-type: none;
			margin:10px 0;
			padding:0;
			font-size: 13px;
			li{
				display: inline-block;
				padding:0;
				margin:0 8px 0 0;
				a{
					color: #fffea6;
				}
			}
		}
	}

	.search-form{
		background: #6c1c78;
		input,
		.btn{
			background:none;
			@include border-radius(0);
		}
		.form-control{
			border:none;
			color:#fff;
			width:344px;
			height: 28px;
			font-size: .90em;
		}
		.btn{
			color: #fff;
			height: 28px;
			padding:3px 12px;
		}
		input:focus{
			outline:none;
			box-shadow:none;
		}
		::-webkit-input-placeholder {
		   color: #e0d6e2;
		}

		:-moz-placeholder { /* Firefox 18- */
		   color: #e0d6e2;  
		}

		::-moz-placeholder {  /* Firefox 19+ */
		   color: #e0d6e2;  
		}

		:-ms-input-placeholder {  
		   color: #e0d6e2;  
		}
	}

	.top-columns,
	.top-columns_mobile{
		margin-top:20px;
		float:right;
		li{
			list-style-type:none;
			position:relative;
			float:left;
			text-align:right;
			width:115px;
			font-family: $museo-500;
			font-size: 16px;
			color: #e6d6a5;
			a{
				color: #e6d6a5;	
			}
			h2{
				font-size:12px;
				color: #fff;
				font-family: $brandon-bold;
			}
			.icon{
				position:absolute;
				top:50%;
				right:-30px;
				margin-top:-5px;
			}
		}
		li.account{
			cursor: pointer;
			.account-popover-contents{
				position:absolute;
				visibility: hidden;
			}
		}
		li.cart,
		li.mobile-cart{
			cursor:pointer;
			text-align: center;
			position:relative;
			margin-left:32px;
			.badge{
				position:absolute;
				right:15px;
				top:-10px;
				background:#fd4b6d;
				font-size: 16px;
				font-weight: normal;
				padding:4px 8px;
				min-width: 28px;
				@include border-radius(4px);
			}
			.icon{
				position: static;
			}
			.cart-popover-contents{
				position:absolute;
				visibility:hidden;
				left: -9999px;
			}
		}
	}
}
.top_secondary{
	background:#312a31;
	height:50px;
	#main_nav{
		font-family: $museo-300;
		text-align:left;
		font-size: 14px;
		li{
			a{
				height:50px;
				line-height:50px;
				color:#bdbdbd;
				padding:0 9px;
			}
			:hover{
				text-decoration:none;
			}
		}
		
	}

}
.mobile-overlay{
	/*display:none;*/
	visibility:hidden;
}
#mobile-nav ul{
	list-style-type: none;
}
#mega-menu {
list-style: none;
position: relative;
padding: 0;
margin: 0;
}
#mega-menu li ul, #mega-menu .sub {
display: none;
}
#mega-menu .sub ul {
display: block;
}
#mega-menu {
width: 100%;
height: 40px;
position: relative;
}
#mega-menu li {
float: left;
margin: 0;
padding: 0;
}
#mega-menu li a {
float: left;
display: block;
color: #fff;
text-decoration: none;
}
#mega-menu li.mega-hover a, #mega-menu li a:hover {
background: #fff;
color: $purple;
}
#mega-menu li .sub-container {
position: absolute;
}
#mega-menu li .sub {
background: #fff;
padding: 30px 30px;
color:#706770;
}
#mega-menu li .sub .mrow {
width: 100%;
overflow: hidden;
clear: both;
margin:0 !important;
}
#mega-menu li .sub li {
list-style: none;
float: none;
width: 190px;
font-size: 1em;
font-weight: normal;
}
#mega-menu li .sub li.popular-products{

}
#mega-menu li .sub li h4{
	font-family:$brandon-italic;
	font-weight:normal;
	font-size: 16px;
	color:#575757;
	text-transform:uppercase;
	margin-bottom:10px;
}
#mega-menu li .sub li.mega-hdr {
margin: 0 10px 10px 0;
float: left;
}
#mega-menu li .sub li.mega-hdr.last {
margin-right: 0;
}
#mega-menu li .sub a {
background: none;
padding:0;
color: #111;
height:auto;
line-height:inherit;
padding:5px 0;
display: block;
float: none;
font-size: 0.9em;
}
#mega-menu li .sub li.mega-hdr a.mega-hdr-a {
padding:0;
margin-bottom: 5px;
background: #6B6B6B;
text-transform: uppercase;
font-weight: bold;
color: #fff;
}
#mega-menu li .sub li.mega-hdr a.mega-hdr-a:hover {
color: $purple;
}
#mega-menu .sub li.mega-hdr li a {
font-weight: normal;
}
#mega-menu .sub li.mega-hdr li a:hover {
color: $purple;
}
#mega-menu .sub ul li {
padding-right: 0;
}
#mega-menu li .sub-container.non-mega .sub {
padding: 10px;
}
#mega-menu li .sub-container.non-mega li {
padding: 0;
width: 190px;
margin: 0;
}
#mega-menu li .sub-container.non-mega li a {
padding: 7px 5px 7px 22px;
}
#mega-menu li .sub-container.non-mega li a:hover {
color: #a32403;
background: #efefef;
}
.windowshade{
	background: rgba(246,245,236,1);
	background: -moz-linear-gradient(left, rgba(246,245,236,1) 0%, rgba(246,245,236,1) 49%, rgba(247,244,206,1) 49%, rgba(247,244,206,1) 100%);
	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(246,245,236,1)), color-stop(49%, rgba(246,245,236,1)), color-stop(49%, rgba(247,244,206,1)), color-stop(100%, rgba(247,244,206,1)));
	background: -webkit-linear-gradient(left, rgba(246,245,236,1) 0%, rgba(246,245,236,1) 49%, rgba(247,244,206,1) 49%, rgba(247,244,206,1) 100%);
	background: -o-linear-gradient(left, rgba(246,245,236,1) 0%, rgba(246,245,236,1) 49%, rgba(247,244,206,1) 49%, rgba(247,244,206,1) 100%);
	background: -ms-linear-gradient(left, rgba(246,245,236,1) 0%, rgba(246,245,236,1) 49%, rgba(247,244,206,1) 49%, rgba(247,244,206,1) 100%);
	background: linear-gradient(to right, rgba(246,245,236,1) 0%, rgba(246,245,236,1) 49%, rgba(247,244,206,1) 49%, rgba(247,244,206,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f5ec', endColorstr='#f7f4ce', GradientType=1 );
}
/* ... */

